--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 	<head>
 	    <title>sh#rp</title>
         <style type="text/css">
-			@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+			@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
             body {
-                margin-top: 20%;
+                text-align: center;
                 background-color: 0D0A0B;
-				font-size: 25px;
                 color: DADDD8;
-			font-family: "Lucida Console";
-                	text-align: center;
+			    font-family: "IBM Plex Mono";
+            }
+            .main {
+                margin-top: 50%;
+                width: 100%;
+            }
+            .credits {
+                font-size: 10;
+                position: fixed;
+                bottom: 0;
+                width: 100%;
             }
             a {
             	color: inherit;
@@ -17,13 +25,16 @@
             }
         </style>
     </head>
-    <body>
-        <h2>sh#rp</h2>
-		<div>
+    <body align="center">
+        <div class="main">
+            <h2>sh#rp</h2>
             <a href="https://reddit.com/">Reddit</a>
             <a href="https://gmail.com/">Gmail</a>
             <a href="https://github.com/">GitHub</a>
             <a href="https://web.telegram.org/">Telegram</a>
+        </div>
+        <div class="credits">
+            <a href="https://github.com/relld">with <3 by relld</a>
         </div>
     </body>
 </html>
