--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: 0D0A0B;
-				color: DADDD8;
+				background-color: 1c2023;
+				color: c7ccd1;
 				font-family: "IBM Plex Mono";
 			}
 			a {
