--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: 1c2023;
+				background-color: 0d0a0b;
 				color: c7ccd1;
 				font-family: "IBM Plex Mono";
 			}
