--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 	<head>
 		<title>sh#rp</title>
 		<style type="text/css">
-			@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
 			body {
 				height: 97.5vh;
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: 0d0a0b;
-				color: c7ccd1;
-				font-family: "IBM Plex Mono";
+				background-color: #1f1d2e;
+				color: #e0def4;
+				font-family: "monospace";
 			}
 			a {
 				color: inherit;
@@ -21,11 +20,13 @@
 	</head>
 	<body>
 		<div>
-			<a href="https://github.com/relld/sharp"><h2>sh#rp</h2></a>
+			<h2>Welcome Back To The World Wide Web</h2>
+			<a href="https://youtube.com.com/">YouTube (ugh)</a>
+			<a href="https://neocities.org">NeoCities</a>
 			<a href="https://reddit.com/">Reddit</a>
-			<a href="https://gmail.com/">Gmail</a>
-			<a href="https://github.com/">GitHub</a>
-			<a href="https://web.telegram.org/">Telegram</a>
+			<a href="https://twitter.com">Twitter</a>
+			<a href="https://thekelpcafe.neocities.org">The Kelp Cafe</a>
+			
 		</div>
 	</body>
 </html>
