--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #1f1d2e;
-				color: #e0def4;
+				background-color: #26233a;
+				color: #ebbcba;
 				font-family: "monospace";
 			}
 			a {
-				color: inherit;
+				color: #9ccfd8;
 				text-decoration: none;
 			}
 			
