--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<div>
 			<h2>Welcome Back To The World Wide Web</h2>
-			<a href="https://youtube.com.com/">YouTube (ugh)</a>
+			<a href="https://youtube.com./">YouTube (sadly)</a>
 			<a href="https://neocities.org">NeoCities</a>
 			<a href="https://reddit.com/">Reddit</a>
 			<a href="https://twitter.com">Twitter</a>
